Made 8GB memory allocation for server more consistent